--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -5,17 +5,16 @@
 .container {
   max-width: 1320px;
   margin: 0 auto;
-  padding: 0 12px;
+  padding: 0 24px;
+
   @include tab{
     max-width:720px;
-    padding: 0 12px;
   }
   @include mobile{
       max-width:374px;
       padding: 0 12px;
   }
 }
-
 
 .sec2under{
   background-color:#FBF2F2 ;
@@ -79,15 +78,23 @@
     font-weight: bold;
     font-size: 48px;
     padding-bottom: 48px;
+    @include mobile{
+      font-size: 24px;
+    }
   }
   .gridcontainer{
     display: grid;
+
     grid-template-columns: repeat(3,1fr);
     gap: 24px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     @include tab{
       display: grid;
       grid-template-columns: repeat(1,1fr);
       gap: 24px;
+      align-items: center;
     }
     @include mobile{
       @include tab{
@@ -96,9 +103,13 @@
         gap: 24px;
       }
     }
+    .griditem{
+      justify-content: center;
+      align-items: center;
+    }
   }
   img{
-    height: 416px;
+    max-width: 100%;
     @include tab{
       height: 336px;
       max-width: 100%;
@@ -166,6 +177,16 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 24px;
+    @include tab{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 24px;
+    }
+    @include mobile{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+      gap: 24px;
+    }
 
   }
   h2{
