--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -74,6 +74,11 @@ nav{
     width: 48px;
     height: 48px;
     padding-left: 24px;
+
+    @include mobile{
+        width: 24px;
+        height: 24px;
+    }
   }
   
   
