--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -14,12 +14,12 @@
 <body>
   <nav class="nav">
     <div class="navconet container">
-        <h1 class="logo"><a href="#" title="logo"></a></h1>
+        <h1 class="logo"><a href="index.html" title="logo"></a></h1>
         <ul class="menu">
             <li><a href="#">系列鏡框</a></li>
             <li><a href="#">門市據點</a></li>
             <li><a href="#">部落格</a></li>
-            <li><a href="#">常見問題</a></li>
+            <li><a href="page2.html">常見問題</a></li>
         </ul>
     </div>
 </nav>
