--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -28,6 +28,9 @@ nav{
     color: #fff;
     padding: 32px;
     font-size: 20px;
+    @include mobile{
+      display: none;
+    }
   }
   .menu a:hover {
     color: rgb(236, 255, 142);
@@ -55,6 +58,7 @@ nav{
   .footerlist {
     display: flex;
     justify-self: start;
+
   }
   
   
@@ -89,12 +93,21 @@ nav{
     line-height: 1.5;
     padding-bottom: 32px;
     border-bottom: #fff solid 1px;
+    @include mobile{
+     
+      font-size: 16px;
+    }
   }
   
   .cpnotice {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include mobile{
+      flex-direction: column;
+      justify-content: left;
+    }
+
   }
   
   .privacy {
