--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -246,9 +246,12 @@
 }
 
 .contectform{
+  max-width: 636px;
+  margin: 0 auto;
   width: 45%;
   margin: 0 auto;
-  line-height: 1.5;
+  line-height: 2;
+  font-size: 16px;
 
     @include tab{
       width: 73%;
@@ -256,35 +259,56 @@
     @include mobile{
       width: 100%;
     }
-  
-  h2{
-    text-align: center;
-    color: #650300;
-    font-size: 48px;
-    font-weight: bold;
-    padding-bottom: 24px;
-      @include mobile{
-        font-size: 24px;
+
+    li{
+      padding-bottom: 20px;
+    }
+    h2{
+      text-align: center;
+      color: #650300;
+      font-size: 48px;
+      font-weight: bold;
+      padding-bottom: 24px;
+
+        @include mobile{
+          font-size: 24px;
+        }
       }
-    }
+    
 
-    .list_container{
-      width: 100%;
-    }
-  }
-
-@media (max-width:768px) {
-  .menu a {
-    display: none;
-  }
-  .cpnotice {
-    flex-direction: column;
-    justify-content: left;
-  }
-  footer .contect {
-    color: #fff;
-    font-size: 16px;
-    }
+      .input-text{
+        width: 100%; 
+        height: 36px;
+        border: #000000 solid 1px;
+        background-color: #FBF2F2;
+        color: rgba(0, 0, 0, 0.5);
+        font-size: 16px;
+      }
+      .feedback{
+        padding-bottom: 106px;
+      }
+      
+      .name{
+        padding: 12px 0;
+      }
+      .sumbit_btn{
+        margin: 20px;
+        text-align: center;
+      }
+      .input-btn{
+        width: 416px;
+        background-color: #AA0601;
+        color: #fff;
+        margin: 0 auto;
+        border:none;
+        padding: 16px;
+        text-align: center;
+        font-size: 16px;
+                
+      }
   
   }
-  
+
+
+ 
+
