--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,8 +1,13 @@
-@import "varnmixin";
+@import "mixin";
 @import "reset";
 @import "layout";
 @import "indexpage";
 @import "question";
+
+$titlecolor:#AA0601;
+$lightbg:#FBF2F2;
+$font-color-1:#650300;
+
 
 .container {
   max-width: 1320px;
@@ -22,18 +27,20 @@
 .service{
   padding-top: 48px;
   padding-bottom: 80px;
-  background-color:#FBF2F2 ;
+  background-color:$lightbg ;
+  color:$font-color-1;
 
     h2{
       font-size: 48px;
-      color:#650300;
       padding: 36px;
       font-weight: bold;
       text-align: center;
+      @include mobile{
+        font-size: 24px;
+      }
     }
     span{
       font-size: 84px;
-      color:#650300;
       display: block;
       padding: 24px;
       text-align: center;
@@ -42,7 +49,6 @@
       font-size: 24px;
       font-weight: bold;
       padding: 16px;
-      color:#650300;
       text-align: center;
     }
     p{
@@ -72,10 +78,10 @@
   margin-top: 80px;
   margin-bottom: 80px;
   text-align: center;
+  color:$font-color-1 ;
 
   h2{
     text-align: center;
-    color:#650300 ;
     font-weight: bold;
     font-size: 48px;
     padding-bottom: 48px;
@@ -121,14 +127,14 @@
   }
 
   h3{
-
-    color: $titlecolor;
+    font-family: 'Roboto', sans-serif;
+    color: #AA0601;
     text-align: center;
     font-style: italic;
     font-weight: bold;
     font-size: 48px;
     line-height: 1.5;
-    font-family: 'Roboto', sans-serif;
+
   }
 }
  
@@ -167,7 +173,7 @@
   }
 
   h3{
-    color:$titlecolor ;
+    color:$font-color-1 ;
     text-align: center;
     font-style: italic;
     font-weight: bold;
@@ -187,8 +193,6 @@
   font-size: 16px;
 
   .recommen_flex{
-    // display: grid;
-    // grid-template-columns: repeat(4,1fr);
     display: flex;
     justify-self: center;
     gap: 24px;
@@ -207,7 +211,7 @@
 
   h2{
     text-align: center;
-    color: #650300;
+    color:$font-color-1 ;
     font-size: 48px;
     font-weight: bold;
     padding-bottom: 24px;
@@ -231,16 +235,19 @@
     font-size: 14px;
   }
   .card{
-    
-    min-width: 100%;
+    min-height: 100%;
     border-radius: 4px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3)
   }
- 
+    .card:hover{
+      transform: scale(1.03);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      transition: 0.4s;
+    }
 }
 
 .contacctus_under{
-  background-color: #FBF2F2;
+  background-color: $lightbg;
   padding-top: 80px;
   padding-bottom: 80px;
 }
@@ -265,7 +272,7 @@
     }
     h2{
       text-align: center;
-      color: #650300;
+      color:$font-color-1 ;
       font-size: 48px;
       font-weight: bold;
       padding-bottom: 24px;
@@ -281,7 +288,6 @@
         height: 36px;
         border: #000000 solid 1px;
         background-color: #FBF2F2;
-        color: rgba(0, 0, 0, 0.5);
         font-size: 16px;
       }
       .feedback{
@@ -297,15 +303,19 @@
       }
       .input-btn{
         width: 416px;
-        background-color: #AA0601;
+        background-color: $titlecolor;
         color: #fff;
-        margin: 0 auto;
         border:none;
         padding: 16px;
-        text-align: center;
         font-size: 16px;
-                
       }
+      .input-btn:hover{
+        background-color: $font-color-1;
+        
+      }
+    
+
+
   
   }
 
