--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -261,10 +261,10 @@ $font-color-1:#650300;
   font-size: 16px;
 
     @include tab{
-      width: 73%;
+      max-width: 73%;
     }
     @include mobile{
-      width: 100%;
+      max-width: 100%;
     }
 
     li{
@@ -284,8 +284,8 @@ $font-color-1:#650300;
     
 
       .input-text{
-        width: 100%; 
-        height: 36px;
+        width: 100%;
+        padding: 8px;;
         border: #000000 solid 1px;
         background-color: #FBF2F2;
         font-size: 16px;
@@ -302,11 +302,11 @@ $font-color-1:#650300;
         text-align: center;
       }
       .input-btn{
-        width: 416px;
+        width:100%;
         background-color: $titlecolor;
         color: #fff;
         border:none;
-        padding: 16px;
+        padding:16px 0;
         font-size: 16px;
       }
       .input-btn:hover{
