--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -2,120 +2,162 @@
 
 nav{
     background-color: $titlecolor;
+    height: 80px;
+
   }
   
-  footer {
-    background-color: $titlecolor;
-    color: #fff;
-    padding: 24px 0px;
-  } 
+
+
+
+.navcontent{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+ 
+  img{
+    width: 80px;
+    align-items: center;
+  }
+    .menu {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 25px;
+      margin-bottom: 25px;
+      line-height: 1.5;
+    }
   
-  .navconet{
+    li{
+      padding-left: 64px;
+      @include mobile{
+        display: none;
+      }
+    }
+    a{
+      color: #fff;
+      font-size: 20px;
+
+
+    }
+    a:hover {
+      color: rgb(236, 255, 142);
+      font-size: 21px;
+      transition: 0.4s;
+      
+  }
+  
+  
+}
+
+footer {
+  background-color: $titlecolor;
+  color: #fff;
+} 
+
+.footermenu{
+  padding-top: 40px;
+  @include mobile{
+    padding-top: 24px;
+  }
+}
+
+  .footernav {
+    padding-top:40px; 
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .menu {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    line-height: 1.5;
-  }
-  
-  .menu a {
-    color: #fff;
-    padding: 32px;
-    font-size: 20px;
+
+    padding-bottom: 24px;
+    border-bottom: #fff solid 1px;
+    
     @include mobile{
-      display: none;
+      padding-top: 24px;
     }
   }
-  .menu a:hover {
-    color: rgb(236, 255, 142);
-  }
-  
-  
-.logo a {
-    display: block;
-    width: 80px;
-    height: 48px;
-    background: url(https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/logo-white.png);
-    background-repeat: no-repeat;
-    background-size: 80px 48.57px;
-  }
-
-
-
-  
-.footernav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+ 
   .footerlist {
-    display: flex;
-    justify-self: start;
+      display: flex;
+      justify-self: start;
+      @include mobile{
+        display: none;
+      }
+      a {
+        color:#fff;
+        font-size: 16px;
+        padding-right: 24px;
+      }
+    
+  }
 
+  .contectus{
+    padding-bottom: 24px;
+    span{
+      padding-bottom: 8px;
+      font-size: 36px;
+      @include mobile{
+        font-size: 16px;
+      }
+    }
+    a{    
+      color: #fff;
+      font-size: 36px;
+      line-height: 2;
+      @include mobile{
+        font-size: 16px;
+      }
+    }
   }
-  
-  
-  
-  footer a {
-    color:#fff;
-  }
-  footer .socialicon {
+
+  .socialicon {
     display: flex;
     justify-content: flex-end;
-  
-  }
-  
-   
-   
-  footer img {
-    width: 48px;
-    height: 48px;
-    padding-left: 24px;
-
-    @include mobile{
+    img{
+      height: 48px;
+      padding-left: 24px;
+      @include mobile{
         width: 24px;
         height: 24px;
+        padding-left: 8px;
+      }
     }
-  }
+    
+
   
-  
-  
-  footer .contect {
-    color: #fff;
-    font-size: 36px;
-    line-height: 1.5;
-    padding-bottom: 32px;
-    border-bottom: #fff solid 1px;
-    @include mobile{
-     
-      font-size: 16px;
-    }
-  }
-  
-  .cpnotice {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    @include mobile{
-      flex-direction: column;
-      justify-content: left;
-    }
 
   }
   
-  .privacy {
+
+.copyright_box{
+
+  display: flex;
+  justify-content: space-between;
+  @include mobile{
+    flex-direction: column;
+  }
+  .copyrightflex_item{
+    padding-top: 32px;
+    padding-bottom: 32px;
+    @include mobile{
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+  }
+  .privacy{
+
     display: flex;
-    justify-content: flex-end;
+    @include mobile{
+      flex-direction: column;
+    }
+    a{
+      line-height: 2;
+      color: #fff;
+      padding-left: 48px;
+      @include mobile{
+
+        padding: 8px 0;
+      }
+    }
   }
-  
-  .privacy li {
-    padding: 24px;
-  }
-   
+
+}
+ 
