--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -65,8 +65,7 @@ footer {
     padding-top:40px; 
     display: flex;
     justify-content: space-between;
-    align-items: center;
-
+ 
     padding-bottom: 24px;
     border-bottom: #fff solid 1px;
     
@@ -82,6 +81,7 @@ footer {
         display: none;
       }
       a {
+            padding-top:40px; 
         color:#fff;
         font-size: 16px;
         padding-right: 24px;
@@ -109,9 +109,15 @@ footer {
   }
 
   .socialicon {
+ 
     display: flex;
-    justify-content: flex-end;
+    align-items: flex-start;
+    padding-top:40px; 
+    @include mobile{
+      padding-top: 24px;
+    }
     img{
+
       height: 48px;
       padding-left: 24px;
       @include mobile{
